@@ -1,8 +1,8 @@
 Package: randomNames
-Version: 0.0-2
-Date: 2011-6-11
+Version: 0.0-3
+Date: 2011-7-1
 Title: Random name generating function and data set
-Depends: R (>= 2.10.0), data.table
+Depends: R (>= 2.10.0), data.table (>= 1.6.2)
 Author: Damian W. Betebenner <dbetebenner@nciea.org>
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Description: Function to generate random gender and ethnicity correct
@@ -12,6 +12,6 @@ Description: Function to generate random gender and ethnicity correct
 LazyLoad: Yes
 LazyData: Yes
 License: GPL-3
-Packaged: 2011-06-07 23:12:44 UTC; damian
+Packaged: 2011-07-01 11:11:13 UTC; damian
 Repository: CRAN
-Date/Publication: 2011-06-15 18:04:28
+Date/Publication: 2011-07-02 14:22:15
