@@ -4,11 +4,11 @@ citEntry(entry = "Manual",
          title        = "{randomNames}: Function for creating gender and ethnicity correct random names",
          author       = "Damian W. Betebenner",
          year         = "2011",
-         note         = "R package version 0.0-2",
+         note         = "R package version 0.0-3",
          url          = "http://cran.r-project.org/web/packages/randomNames/index.html",
          
          textVersion  = paste("Damian W. Betebenner (2011).",
                         "randomNames: Gender and ethnic specific random name generating function.",
-                        "(R package version 0.0-2.",
+                        "(R package version 0.0-3.",
                         "URL http://cran.r-project.org/web/packages/randomNames/index.html")
 )
